--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,9 @@ flake8 = "*"
 boto3 = "*"
 psycopg2-binary = "*"
 python-dotenv = "*"
+pip = "*"
+install = "*"
+sqlalchemy = "*"
 
 [dev-packages]
 
